# NewQuantModel

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: package.json
apps/research/: pyproject.toml
apps/research/src/newquantmodel/analytics/: backtest.py  factor_library.py  signals.py  trade_plans.py
apps/research/src/newquantmodel/cli/: main.py
apps/research/src/newquantmodel/config/: settings.py
apps/research/src/newquantmodel/data/: sample_payloads.py
apps/research/src/newquantmodel/ingestion/: real_data.py
apps/research/src/newquantmodel/models/: genetic.py  pipeline.py
apps/research/src/newquantmodel/providers/: base.py
apps/research/src/newquantmodel/providers/crypto/: binance.py  coingecko.py
apps/research/src/newquantmodel/providers/market/: eastmoney.py  http.py  yahoo.py  yfiua.py
apps/research/src/newquantmodel/publish/: publisher.py  real_pipeline.py  scheduler.py
apps/research/src/newquantmodel/reporting/: csv_export.py  markdown_report.py  pdf_export.py  report_bundle.py
apps/research/src/newquantmodel/storage/: json_store.py  parquet_store.py
apps/research/tests/: test_factor_ga_pipeline.py  test_index_forecasts.py  test_publish_sorting.py  test_report_bundle.py  test_smoke.py  test_stale_fallback.py  test_trade_plans.py
apps/web/: index.html  package.json  (+3 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: check_research_worker_task.ps1  register_research_worker_task.ps1  run_research_worker.sh  start_research_worker.ps1
(+114 files in other folders)
