[project]
name = "newquantmodel-research"
version = "0.1.0"
description = "Offline research and publishing jobs for newquantmodel"
requires-python = ">=3.12"
dependencies = [
  "reportlab>=4.4.0",
  "pypdf>=6.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
