[project]
name = "newquantmodel-research"
version = "0.1.0"
description = "Offline research and publishing jobs for newquantmodel"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17,<24",
  "requests>=2.31",
  "duckdb>=1.1,<2",
  "scikit-learn>=1.5,<2",
  "lightgbm>=4.5,<5",
  "joblib>=1.4",
  "reportlab>=4.4.0",
  "pypdf>=6.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
